# ChangeLog for app-editors/gvim
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.433 2014/08/01 11:41:13 armin76 Exp $

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> gvim-7.4.273.ebuild:
  sparc stable, bug #511190

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> gvim-7.4.273.ebuild:
  Stable on alpha, bug #511190

  26 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> gvim-7.4.273.ebuild:
  amd64 stable wrt bug #511190

  24 Jun 2014; Markus Meier <maekke@gentoo.org> gvim-7.4.273.ebuild:
  arm stable, bug #511190

  22 Jun 2014; Akinori Hattori <hattya@gentoo.org> gvim-7.4.273.ebuild:
  ia64 stable wrt bug #511190

  17 Jun 2014; Jeroen Roovers <jer@gentoo.org> gvim-7.4.273.ebuild:
  Stable for HPPA (bug #511190).

*gvim-7.4.326 (16 Jun 2014)

  16 Jun 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.326.ebuild:
  Version bump.

*gvim-7.4.273 (01 May 2014)

  01 May 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.273.ebuild:
  Version bump.

  27 Apr 2014; Mike Gilbert <floppym@gentoo.org> gvim-7.4.193.ebuild,
  gvim-9999.ebuild:
  Add python3.4.

*gvim-7.4.193 (10 Mar 2014)

  10 Mar 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.193.ebuild,
  gvim-9999.ebuild, +files/gvim-7.4.193-fix-tests.patch:
  Version bump, add support for user patching (bug #503328).

*gvim-7.4.169 (06 Feb 2014)

  06 Feb 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.169.ebuild,
  gvim-9999.ebuild:
  Version bump. Support ruby:2.1, fix lua dep (bug #500376), and force lua
  support to be enabled for luajit (bug #499950).

  23 Jan 2014; Tim Harder <radhermit@gentoo.org> -gvim-7.4.22.ebuild,
  -gvim-7.4.41.ebuild, -gvim-7.4.94.ebuild, -gvim-7.4.131.ebuild:
  Remove old.

*gvim-7.4.155 (23 Jan 2014)

  23 Jan 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.155.ebuild:
  Version bump.

  23 Dec 2013; Julian Ospald <hasufell@gentoo.org> gvim-7.4.22.ebuild,