@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/gvim
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.433 2014/08/01 11:41:13 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.434 2014/08/25 00:06:59 radhermit Exp $
+
+*gvim-7.4.417 (25 Aug 2014)
+
+  25 Aug 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.417.ebuild:
+  Version bump.
 
   01 Aug 2014; Raúl Porcel <armin76@gentoo.org> gvim-7.4.273.ebuild:
   sparc stable, bug #511190
